--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,12 @@
 {
   "presets": [
-    ["env", {
-      "targets": { "node": 7 },
-      "useBuiltIns": true
-    }],
+    [
+      "env",
+      {
+        "targets": { "node": 7 },
+        "useBuiltIns": true
+      }
+    ],
     "stage-0",
     "react"
   ],
@@ -14,14 +17,7 @@
       "plugins": ["babel-plugin-dev-expression"]
     },
     "development": {
-      "plugins": [
-        "transform-class-properties",
-        "transform-es2015-classes",
-        ["flow-runtime", {
-          "assert": true,
-          "annotate": true
-        }]
-      ]
+      "plugins": ["transform-class-properties", "transform-es2015-classes"]
     }
   }
 }
