save before immutable dive
Former-commit-id: 088c366aab2f65626fc318a86df0519311912b53

--- a/package.json
+++ b/package.json
@@ -176,6 +176,7 @@
     "electron-debug": "^1.2.0",
     "font-awesome": "^4.7.0",
     "history": "^4.6.3",
+    "immutable": "^3.8.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "3.0.0-beta.6",
@@ -184,6 +185,8 @@
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.7.1",
+    "redux-immutable": "^4.0.0",
+    "reselect": "^3.0.1",
     "source-map-support": "^0.4.15"
   },
   "devEngines": {
