--- a/package.json
+++ b/package.json
@@ -191,7 +191,8 @@
     "redux": "^3.7.1",
     "redux-thunk": "^2.3.0",
     "source-map-support": "^0.4.15",
-    "three": "^0.93.0"
+    "three": "^0.93.0",
+    "victory": "^0.27.2"
   },
   "devEngines": {
     "node": ">=7.x",
