--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nexus-interface",
   "productName": "Nexus Interface",
   "version": "1.0.0",
+  "buildDate": "March 10th 2018",
   "description": "nexus interface electron wallet",
   "scripts": {
     "build": "concurrently \"npm run build-main\" \"npm run build-renderer\"",
@@ -23,7 +24,8 @@
     "start-renderer-dev": "cross-env NODE_ENV=development node --trace-warnings -r babel-register ./node_modules/webpack-dev-server/bin/webpack-dev-server --config webpack.config.renderer.dev.js",
     "test": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 node --trace-warnings ./test/runTests.js",
     "test-e2e": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 node --trace-warnings ./test/runTests.js e2e",
-    "test-watch": "npm test -- --watch"
+    "test-watch": "npm test -- --watch",
+    "version2": "node ./internals/scripts/UpdateBuildDate.js"
   },
   "browserslist": "electron 1.6",
   "build": {
