--- a/package.json
+++ b/package.json
@@ -178,6 +178,8 @@
     "auto-launch": "^5.0.5",
     "devtron": "^1.4.0",
     "electron-debug": "^1.2.0",
+    "electron-log": "^2.2.16",
+    "electron-updater": "^3.0.3",
     "font-awesome": "^4.7.0",
     "history": "^4.6.3",
     "maxmind": "^2.6.0",
