OMFG that was painful but I got the globe up in a build
Former-commit-id: 00fa70a4d3ffc62d1e541e33deb955d8bb3e4ab9

--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
       "main.prod.js.map",
       "package.json"
     ],
+    "extraResources": [
+      "GeoLite2-City_20180403/**/*",
+      "cores/**/*"
+    ],
     "dmg": {
       "contents": [
         {
