--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "babili-webpack-plugin": "^0.1.2",
     "chalk": "^2.0.1",
     "concurrently": "^3.6.1",
+    "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.0.0",
     "cross-spawn": "^5.1.0",
     "css-loader": "^0.28.3",
