--- a/package.json
+++ b/package.json
@@ -190,6 +190,7 @@
     "electron-updater": "^3.1.1",
     "font-awesome": "^4.7.0",
     "history": "^4.6.3",
+    "is-port-available": "^0.1.5",
     "maxmind": "^2.6.0",
     "react": "^15.6.1",
     "react-activity": "^1.2.2",
