Still needs a bit more clean up but new history functions done.
Former-commit-id: 2d1f16eaad91cfb439a51882b47ce6346ab7dfc7

--- a/package.json
+++ b/package.json
@@ -206,6 +206,7 @@
     "react-vis": "^1.10.1",
     "redux": "^3.7.1",
     "redux-thunk": "^2.3.0",
+    "request-promise": "^4.2.2",
     "source-map-support": "^0.4.15",
     "three": "^0.93.0",
     "universal-analytics": "^0.4.17",
