cool fixed a few things
Former-commit-id: 8bd5cab89e09650b5e92ffedb1026014c55e3200

--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
       "package.json"
     ],
     "extraResources": [
-      "GeoLite2-City_20180403/**/*",
-      "cores/**/*"
+      "./GeoLite2-City_20180403/**/*",
+      "./images/tray/**/*",
+      "./cores/**/*"
     ],
     "publish": {
       "provider": "github"
