--- a/package.json
+++ b/package.json
@@ -195,7 +195,9 @@
     "maxmind": "^2.6.0",
     "react": "^15.6.1",
     "react-activity": "^1.2.2",
+    "react-color": "^2.14.1",
     "react-countdown-now": "^1.3.0",
+    "react-custom-properties": "^1.2.0",
     "react-dom": "^15.6.1",
     "react-hot-loader": "3.0.0-beta.6",
     "react-redux": "^5.0.5",
