--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexus-interface",
-  "productName": "nexus interface electron wallet",
+  "productName": "nexus-interface",
   "version": "0.4.1",
   "description": "nexus interface electron wallet",
   "main": "./main.prod.js",
