--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
       "package.json"
     ],
     "extraResources": [
-      "./GeoLite2-City_20180403/**/*",
-      "./images/tray/**/*",
-      "./cores/**/*"
+      "./app/GeoLite2-City_20180403/**/*",
+      "./app/images/tray/**/*",
+      "./app/cores/**/*"
     ],
     "publish": {
       "provider": "github"
