cool try this Bibbitty
Former-commit-id: 47290ea5b6e5002b66ccdae632cfeb232b687d80

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "extraResources": [
       "./app/GeoLite2-City_20180403/**/*",
       "./app/images/tray/**/*",
-      "./app/cores/**/*"
+      "./app/cores/**/*",
+      "./app/images/background/**/*"
     ],
     "publish": {
       "provider": "github"
