Added several menu options and auto daemon ability
Former-commit-id: 319c6d2425946795dfe454657b59b1cb8ab3eca1

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
       "app.html",
       "main.prod.js",
       "main.prod.js.map",
-      "package.json"
+      "package.json",
+      "resources/**/*"
     ],
     "extraResources": [
       "./app/GeoLite2-City_20180403/**/*",
@@ -69,8 +70,7 @@
     },
     "linux": {
       "target": [
-        "deb",
-        "AppImage"
+        "deb"
       ]
     },
     "directories": {
@@ -101,7 +101,7 @@
   "homepage": "https://github.com/Nexusoft/Nexus-Interface-React/#readme",
   "jest": {
     "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/internals/mocks/fileMock.js",
+      "\\.(mmdb|jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/internals/mocks/fileMock.js",
       "\\.(css|less|sass|scss)$": "identity-obj-proxy"
     },
     "moduleFileExtensions": [
