--- a/package.json
+++ b/package.json
@@ -186,6 +186,7 @@
   },
   "dependencies": {
     "auto-launch": "^5.0.5",
+    "csvtojson": "^2.0.8",
     "devtron": "^1.4.0",
     "electron-debug": "^1.2.0",
     "electron-directory": "0.0.3",
