--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
       "shortcutName": "Tritium Wallet (Beta)",
       "artifactName": "Nexus Tritium (Beta) Setup.exe"
     },
-    "linux": { "target": [
+    "linux": {
+      "target": [
         "deb"
       ]
     },
@@ -204,6 +205,7 @@
   },
   "dependencies": {
     "auto-launch": "^5.0.5",
+    "csvtojson": "^2.0.8",
     "devtron": "^1.4.0",
     "electron-debug": "^1.2.0",
     "electron-directory": "0.0.3",
