Now using a Copy Plugin
Former-commit-id: 902b39d8ddd1c9a4fb56ad6d3c33f98b82be68c6

--- a/package.json
+++ b/package.json
@@ -205,6 +205,7 @@
   },
   "dependencies": {
     "auto-launch": "^5.0.5",
+    "copy-to-clipboard": "^3.0.8",
     "csvtojson": "^2.0.8",
     "devtron": "^1.4.0",
     "electron-debug": "^1.2.0",
