--- a/package.json
+++ b/package.json
@@ -177,7 +177,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.11.1",
     "express": "^4.16.4",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "fbjs-scripts": "^0.8.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
@@ -198,7 +198,7 @@
     "stylelint": "^7.12.0",
     "stylelint-config-standard": "^16.0.0",
     "url-loader": "^1.1.2",
-    "webpack": "^4.20.2",
+    "webpack": "^3.12.0",
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9",
