getting there got percentages
Former-commit-id: dabbd5f6b336564b98e112c1d3c9b6c4c5242716

--- a/package.json
+++ b/package.json
@@ -210,9 +210,10 @@
     "alert-node": "^1.2.2",
     "async": "^2.6.1",
     "auto-launch": "^5.0.5",
-    "csvtojson": "^2.0.8",
     "copy-to-clipboard": "^3.0.8",
+    "csvtojson": "^2.0.8",
     "devtron": "^1.4.0",
+    "download": "^7.1.0",
     "electron-debug": "^1.2.0",
     "electron-directory": "0.0.3",
     "electron-log": "^2.2.17",
@@ -240,6 +241,7 @@
     "react-vis": "^1.10.1",
     "redux": "^3.7.1",
     "redux-thunk": "^2.3.0",
+    "remote-file-size": "^3.0.5",
     "request-promise": "^4.2.2",
     "source-map-support": "^0.4.15",
     "systeminformation": "^3.45.7",
