Various fixes and additions
Former-commit-id: 0172b94e0488cf8e2548a629e52d6ca7755a0138

--- a/package.json
+++ b/package.json
@@ -201,7 +201,7 @@
     "webpack": "^3.12.0",
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9",
+    "webpack-dev-server": "^2.11.3",
     "webpack-merge": "^4.1.4",
     "webpack-sources": "^1.1.0"
   },
@@ -210,8 +210,8 @@
     "alert-node": "^1.2.2",
     "async": "^2.6.1",
     "auto-launch": "^5.0.5",
-    "csvtojson": "^2.0.8",
     "copy-to-clipboard": "^3.0.8",
+    "csvtojson": "^2.0.8",
     "devtron": "^1.4.0",
     "electron-debug": "^1.2.0",
     "electron-directory": "0.0.3",
@@ -223,6 +223,7 @@
     "history": "^4.6.3",
     "macaddress": "^0.2.9",
     "maxmind": "^2.6.0",
+    "process-exists": "^3.1.0",
     "ps-node": "^0.1.6",
     "react": "^15.6.1",
     "react-activity": "^1.2.2",
@@ -231,10 +232,10 @@
     "react-custom-properties": "^1.2.0",
     "react-dom": "^15.6.1",
     "react-hot-loader": "3.0.0-beta.6",
-    "react-redux": "^5.0.5",
+    "react-redux": "^4.4.9",
     "react-responsive-modal": "^3.1.0",
-    "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.6",
     "react-table": "^6.8.6",
     "react-vis": "^1.10.1",
@@ -243,9 +244,9 @@
     "request-promise": "^4.2.2",
     "source-map-support": "^0.4.15",
     "systeminformation": "^3.45.7",
-    "three": "^0.93.0",
+    "three": "^0.97.0",
     "universal-analytics": "^0.4.17",
-    "victory": "^0.27.2",
+    "victory": "^30.5.1",
     "wait-on": "^3.0.1",
     "xmlhttprequest": "^1.8.0"
   },
