--- a/package.json
+++ b/package.json
@@ -156,14 +156,14 @@
     "babel-register": "^6.24.1",
     "babili-webpack-plugin": "^0.1.2",
     "chalk": "^2.0.1",
-    "concurrently": "^3.6.1",
+    "concurrently": "^4.0.1",
     "copy-webpack-plugin": "^4.5.3",
-    "cross-env": "^5.0.0",
-    "cross-spawn": "^5.1.0",
-    "css-loader": "^0.28.3",
+    "cross-env": "^5.2.0",
+    "cross-spawn": "^6.0.5",
+    "css-loader": "^1.0.0",
     "electron": "^1.8.8",
     "electron-builder": "^20.28.4",
-    "electron-devtools-installer": "^2.2.0",
+    "electron-devtools-installer": "^2.2.4",
     "enzyme": "^2.9.1",
     "enzyme-to-json": "^1.5.1",
     "eslint": "^5.7.0",
@@ -189,7 +189,7 @@
     "react-addons-test-utils": "^15.6.0",
     "react-test-renderer": "^15.6.1",
     "redux-logger": "^3.0.6",
-    "rimraf": "^2.6.1",
+    "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "sinon": "^2.3.5",
     "spectron": "^3.7.0",
@@ -213,14 +213,14 @@
     "copy-to-clipboard": "^3.0.8",
     "csvtojson": "^2.0.8",
     "devtron": "^1.4.0",
-    "electron-debug": "^1.2.0",
+    "electron-debug": "^2.0.0",
     "electron-directory": "0.0.3",
     "electron-log": "^2.2.17",
     "electron-updater": "^3.1.1",
-    "find-process": "^1.1.3",
     "font-awesome": "^4.7.0",
     "getmac": "^1.4.6",
     "history": "^4.6.3",
+    "is-running": "^2.1.0",
     "macaddress": "^0.2.9",
     "maxmind": "^2.6.0",
     "process-exists": "^3.1.0",
@@ -232,27 +232,27 @@
     "react-custom-properties": "^1.2.0",
     "react-dom": "^15.6.1",
     "react-hot-loader": "3.0.0-beta.6",
-    "react-redux": "^4.4.9",
+    "react-redux": "^5.0.7",
     "react-responsive-modal": "^3.1.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.6",
     "react-table": "^6.8.6",
     "react-vis": "^1.10.1",
-    "redux": "^3.7.1",
+    "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "request-promise": "^4.2.2",
-    "source-map-support": "^0.4.15",
+    "sleep": "^4.0.0",
+    "source-map-support": "^0.5.9",
     "systeminformation": "^3.45.7",
     "three": "^0.97.0",
     "universal-analytics": "^0.4.17",
     "victory": "^30.5.1",
-    "wait-on": "^3.0.1",
     "xmlhttprequest": "^1.8.0"
   },
   "devEngines": {
-    "node": ">=7.x",
-    "npm": ">=4.x",
+    "node": ">=8.x",
+    "npm": ">=5.x",
     "yarn": ">=0.21.3"
   }
 }
