--- a/package.json
+++ b/package.json
@@ -224,6 +224,7 @@
     "history": "^4.6.3",
     "macaddress": "^0.2.9",
     "maxmind": "^2.6.0",
+    "node-stream-zip": "^1.7.0",
     "process-exists": "^3.1.0",
     "ps-node": "^0.1.6",
     "react": "^15.6.1",
@@ -246,6 +247,7 @@
     "request-promise": "^4.2.2",
     "source-map-support": "^0.4.15",
     "systeminformation": "^3.45.7",
+    "tarball-extract": "0.0.6",
     "three": "^0.97.0",
     "universal-analytics": "^0.4.17",
     "victory": "^30.5.1",
