--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "test-watch": "npm test -- --watch",
     "version2": "node ./internals/scripts/UpdateBuildDate.js"
   },
-  "browserslist": "defaults",
+  "browserslist": "electron 1.8",
   "build": {
     "productName": "Nexus_Tritium_Wallet_Beta",
     "appId": "com.nexusearth.NexusTritiumBeta",
@@ -215,6 +215,7 @@
     "alert-node": "^1.2.2",
     "async": "^2.6.1",
     "auto-launch": "^5.0.5",
+    "browserslist": "^4.3.4",
     "connected-react-router": "^4.5.0",
     "copy-to-clipboard": "^3.0.8",
     "csvtojson": "^2.0.8",
@@ -230,7 +231,8 @@
     "find-process": "^1.1.3",
     "font-awesome": "^4.7.0",
     "getmac": "^1.4.6",
-    "history": "^4.6.3",
+    "history": "^4.7.2",
+    "is-running": "^2.1.0",
     "macaddress": "^0.2.9",
     "maxmind": "^2.6.0",
     "node-stream-zip": "^1.7.0",
@@ -249,7 +251,6 @@
     "react-responsive-modal": "^3.5.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-router-redux": "^5.0.0-alpha.9",
     "react-table": "^6.8.6",
     "react-vis": "^1.11.4",
     "redux": "^4.0.1",
