Dom Testing done ready for use
Former-commit-id: 156325794a7e7a3b6d75b22e13b79fbf30490014

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "test": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 node --trace-warnings ./test/runTests.js",
     "test-e2e": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 node --trace-warnings ./test/runTests.js e2e",
     "test-watch": "npm test -- --watch",
+    "test:e2e": "./node_modules/mocha/bin/mocha tests/test.js",
     "version2": "node ./internals/scripts/UpdateBuildDate.js"
   },
   "browserslist": "electron 1.8",
@@ -197,7 +198,7 @@
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "sinon": "^2.3.5",
-    "spectron": "^3.7.0",
+    "spectron": "^3.8.0",
     "style-loader": "^0.18.1",
     "stylefmt": "^6.0.2",
     "stylelint": "^7.12.0",
@@ -216,6 +217,8 @@
     "async": "^2.6.1",
     "auto-launch": "^5.0.5",
     "browserslist": "^4.3.4",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "connected-react-router": "^4.5.0",
     "copy-to-clipboard": "^3.0.8",
     "csvtojson": "^2.0.8",
@@ -235,6 +238,7 @@
     "is-running": "^2.1.0",
     "macaddress": "^0.2.9",
     "maxmind": "^2.6.0",
+    "mocha": "^5.2.0",
     "node-stream-zip": "^1.7.0",
     "process-exists": "^3.1.0",
     "ps-node": "^0.1.6",
