using absolute imports instead of relative upward imports, some directory reorganization and renaming
Former-commit-id: 695148e37ba3559c146bec099ad3d6dba2f9b56d

--- a/.babelrc
+++ b/.babelrc
@@ -10,7 +10,16 @@
     "stage-0",
     "react"
   ],
-  "plugins": ["add-module-exports", "dynamic-import-webpack"],
+  "plugins": [
+    "add-module-exports",
+    "dynamic-import-webpack",
+    [
+      "module-resolver",
+      {
+        "root": ["./app"]
+      }
+    ]
+  ],
   "env": {
     "production": {
       "presets": ["react-optimize"],
