--- a/package.json
+++ b/package.json
@@ -213,10 +213,13 @@
     "webpack-sources": "^1.3.0"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.1",
+    "@emotion/styled": "^10.0.1",
     "ajv": "^6.5.4",
     "alert-node": "^1.2.2",
     "async": "^2.6.1",
     "auto-launch": "^5.0.5",
+    "babel-plugin-emotion": "^10.0.0",
     "browserslist": "^4.3.4",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
