updated build date
Former-commit-id: 82dee8d5b8a0547c9fc55292e25e7de62b94f9b7

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nexus-tritium-beta",
   "productName": "Nexus_Tritium_Wallet_Beta",
   "version": "0.8.2",
-  "buildDate": "October 19th 2018",
+  "buildDate": "December 3rd 2018",
   "description": "Nexus_Tritium_Wallet_Beta",
   "scripts": {
     "build": "concurrently \"npm run build-main\" \"npm run build-renderer\"",
