--- a/package.json
+++ b/package.json
@@ -246,13 +246,14 @@
     "move-file": "^1.0.0",
     "node-stream-zip": "^1.7.0",
     "process-exists": "^3.1.0",
+    "prop-types": "^15.6.2",
     "ps-node": "^0.1.6",
-    "react": "^15.6.2",
+    "react": "^16.6.3",
     "react-activity": "^1.2.2",
     "react-color": "^2.14.1",
     "react-countdown-now": "^1.3.0",
     "react-custom-properties": "^1.2.0",
-    "react-dom": "^15.6.2",
+    "react-dom": "^16.6.3",
     "react-hot-loader": "^4.3.12",
     "react-intl": "^2.7.2",
     "react-intl-redux": "^2.0.2",
