--- a/package.json
+++ b/package.json
@@ -151,6 +151,7 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-dev-expression": "^0.2.1",
     "babel-plugin-dynamic-import-webpack": "^1.1.0",
+    "babel-plugin-emotion": "^10.0.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-classes": "^6.24.1",
@@ -204,6 +205,7 @@
     "stylefmt": "^6.0.2",
     "stylelint": "^7.12.0",
     "stylelint-config-standard": "^16.0.0",
+    "svg-sprite-loader": "^4.1.3",
     "url-loader": "^1.1.2",
     "webpack": "^4.25.1",
     "webpack-bundle-analyzer": "^3.0.3",
@@ -219,7 +221,6 @@
     "alert-node": "^1.2.2",
     "async": "^2.6.1",
     "auto-launch": "^5.0.5",
-    "babel-plugin-emotion": "^10.0.0",
     "browserslist": "^4.3.4",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
