--- a/package.json
+++ b/package.json
@@ -217,8 +217,6 @@
     "webpack-sources": "^1.3.0"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.1",
-    "@emotion/styled": "^10.0.1",
     "ajv": "^6.5.4",
     "alert-node": "^1.2.2",
     "async": "^2.6.1",
@@ -237,6 +235,7 @@
     "electron-is-dev": "^1.0.1",
     "electron-log": "^2.2.17",
     "electron-updater": "^3.1.1",
+    "emotion": "9.2.12",
     "fd-slicer": "^1.1.0",
     "find-process": "^1.1.3",
     "font-awesome": "^4.7.0",
@@ -257,6 +256,7 @@
     "react-countdown-now": "^1.3.0",
     "react-custom-properties": "^1.2.0",
     "react-dom": "^16.6.3",
+    "react-emotion": "9.2.12",
     "react-hot-loader": "^4.3.12",
     "react-intl": "^2.7.2",
     "react-intl-redux": "^2.0.2",
