--- a/package.json
+++ b/package.json
@@ -151,7 +151,7 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-dev-expression": "^0.2.1",
     "babel-plugin-dynamic-import-webpack": "^1.1.0",
-    "babel-plugin-emotion": "^10.0.0",
+    "babel-plugin-emotion": "9.2.11",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-classes": "^6.24.1",
