--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
       "./app/cores/**/*",
       "./app/images/background/**/*",
       "license.txt",
-      "installerSidebar.bmp"
+      "installerSidebar.bmp",
+      "./app/languages/*"
     ],
     "publish": {
       "provider": "github"
