--- a/package.json
+++ b/package.json
@@ -171,7 +171,7 @@
     "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.0",
     "babel-plugin-dev-expression": "^0.2.1",
-    "babel-plugin-emotion": "9.2.11",
+    "babel-plugin-emotion": "^10.0.4",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-transform-react-pure-class-to-function": "^1.0.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.21",
@@ -227,6 +227,8 @@
     "webpack-sources": "^1.3.0"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.4",
+    "@emotion/styled": "^10.0.4",
     "ajv": "^6.5.4",
     "alert-node": "^1.2.2",
     "async": "^2.6.1",
@@ -245,7 +247,6 @@
     "electron-is-dev": "^1.0.1",
     "electron-log": "^2.2.17",
     "electron-updater": "^3.1.1",
-    "emotion": "9.2.12",
     "fd-slicer": "^1.1.0",
     "find-process": "^1.1.3",
     "font-awesome": "^4.7.0",
@@ -266,7 +267,6 @@
     "react-countdown-now": "^1.3.0",
     "react-custom-properties": "^1.2.0",
     "react-dom": "^16.6.3",
-    "react-emotion": "9.2.12",
     "react-hot-loader": "^4.3.12",
     "react-intl": "^2.7.2",
     "react-intl-redux": "^2.0.2",
