--- a/package.json
+++ b/package.json
@@ -181,7 +181,7 @@
     "cross-env": "^5.0.0",
     "cross-spawn": "^6.0.5",
     "css-loader": "^1.0.1",
-    "electron-builder": "^20.28.4",
+    "electron-builder": "^20.38.2",
     "electron-devtools-installer": "^2.2.0",
     "enzyme": "^3.7.0",
     "enzyme-to-json": "^3.3.4",
@@ -233,6 +233,7 @@
     "alert-node": "^1.2.2",
     "async": "^2.6.1",
     "auto-launch": "^5.0.5",
+    "browserlist": "^1.0.1",
     "browserslist": "^4.3.4",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
@@ -241,12 +242,12 @@
     "csvtojson": "^2.0.8",
     "devtron": "^1.4.0",
     "download": "^7.1.0",
-    "electron": "^1.8.8",
+    "electron": "^3.0.10",
     "electron-debug": "^2.0.0",
     "electron-directory": "0.0.3",
     "electron-is-dev": "^1.0.1",
     "electron-log": "^2.2.17",
-    "electron-updater": "^3.1.1",
+    "electron-updater": "^4.0.5",
     "fd-slicer": "^1.1.0",
     "find-process": "^1.1.3",
     "font-awesome": "^4.7.0",
