--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nexus-tritium-beta",
+  "name": "Nexus",
   "productName": "Nexus",
   "version": "0.8.3",
   "buildDate": "December 7th 2018",
