--- a/package.json
+++ b/package.json
@@ -237,6 +237,7 @@
     "browserslist": "^4.3.5",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "color": "^3.1.0",
     "connected-react-router": "^5.0.1",
     "copy-to-clipboard": "^3.0.8",
     "csvtojson": "^2.0.8",
