hey heres what i had to do to get the npm run package to work
Former-commit-id: 0bf124c15a35d723d379041aeb12d4bfe594a50a

--- a/package.json
+++ b/package.json
@@ -240,6 +240,7 @@
     "color": "^3.1.0",
     "connected-react-router": "^5.0.1",
     "copy-to-clipboard": "^3.0.8",
+    "core-js": "^2.6.0",
     "csvtojson": "^2.0.8",
     "devtron": "^1.4.0",
     "download": "^7.1.0",
