--- a/package.json
+++ b/package.json
@@ -221,6 +221,7 @@
     "browserslist": "^4.3.4",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "check-disk-space": "^1.5.0",
     "connected-react-router": "^4.5.0",
     "copy-to-clipboard": "^3.0.8",
     "csvtojson": "^2.0.8",
