--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Nexus",
-  "productName": "Nexus",
-  "version": "0.8.3",
+  "name": "nexus_wallet",
+  "productName": "Nexus Wallet",
+  "version": "0.8.4",
   "buildDate": "December 7th 2018",
   "description": "Nexus",
   "scripts": {
