--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexus_wallet",
-  "productName": "Nexus Wallet",
+  "productName": "Nexus_Wallet_BETA_v0.8.4",
   "version": "0.8.4",
   "description": "Nexus",
   "main": "./main.prod.js",
