--- a/package.json
+++ b/package.json
@@ -250,6 +250,7 @@
     "electron-is-dev": "^1.0.1",
     "electron-log": "^2.2.17",
     "electron-updater": "^4.0.5",
+    "emotion-theming": "^10.0.5",
     "fd-slicer": "^1.1.0",
     "find-process": "^1.1.3",
     "getmac": "^1.4.6",
