refactored intl system
Former-commit-id: 390409a218c39e5b2be7fdbf83a5e1f5b0101e82

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
       "./app/images/background/**/*",
       "license.txt",
       "installerSidebar.bmp",
-      "./app/translations/*"
+      "./app/languages/*"
     ],
     "publish": {
       "provider": "github"
