main.dev.js -> main.js and main.dev.js as the webpack'ed main.js in dev mode
Former-commit-id: efd18747cd39112161f3362c33df345766129b55

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "concurrently \"npm run build-main\" \"npm run build-renderer\"",
     "build-dll": "cross-env NODE_ENV=development node --trace-warnings -r @babel/register ./node_modules/webpack/bin/webpack --mode=development --config webpack.config.renderer.dev.dll.js --color",
     "build-main": "cross-env NODE_ENV=production node --trace-warnings -r @babel/register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.main.prod.js --color",
+    "build-main-dev": "cross-env NODE_ENV=development node --trace-warnings -r @babel/register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.main.dev.js --color",
     "build-renderer": "cross-env NODE_ENV=production node  --max-old-space-size=4076 --trace-warnings -r @babel/register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.renderer.prod.js --color",
     "dev": "cross-env START_HOT=1 npm run start-renderer-dev",
     "lint": "eslint --cache --format=node_modules/eslint-formatter-pretty .",
@@ -24,7 +25,7 @@
     "prod": "cross-env NODE_ENV=production NODE_ENV_RUN=production-test electron ./app/",
     "start": "cross-env NODE_ENV=production electron ./app/",
     "start-test": "cross-env NODE_ENV_RUN=production-test electron ./app/",
-    "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron ./app/main.prod",
+    "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron ./app/main.dev",
     "start-renderer-dev": "cross-env NODE_ENV=development node --trace-warnings -r @babel/register ./node_modules/webpack-dev-server/bin/webpack-dev-server --config webpack.config.renderer.dev.js",
     "test": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 node --trace-warnings ./test/runTests.js",
     "test-e2e": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 node --trace-warnings ./test/runTests.js e2e",
