revamp the BootstrapModal
Former-commit-id: cfc30693e338604b18c166f7e77ca3e5b565a7a6

--- a/package.json
+++ b/package.json
@@ -262,6 +262,7 @@
     "mocha": "^5.2.0",
     "move-file": "^1.0.0",
     "node-stream-zip": "^1.7.0",
+    "pretty-bytes": "^5.1.0",
     "process-exists": "^3.1.0",
     "prop-types": "^15.6.2",
     "ps-node": "^0.1.6",
