--- a/package.json
+++ b/package.json
@@ -281,6 +281,7 @@
     "react-table": "^6.8.6",
     "react-vis": "^1.11.4",
     "redux": "^4.0.1",
+    "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0",
     "remote-file-size": "^3.0.5",
     "request-promise": "^4.2.2",
