--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nexus_wallet",
-  "productName": "Nexus_Wallet_BETA_v0.8.4",
-  "version": "0.8.4",
+  "name": "nexus_wallet_beta",
+  "productName": "Nexus_Wallet_BETA_v0.8.5",
+  "version": "0.8.5",
   "description": "Nexus",
   "main": "./main.prod.js",
   "author": {
