--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nexus_wallet",
-  "productName": "Nexus_Wallet_BETA_v0.8.4",
-  "version": "0.8.4",
+  "name": "nexus_wallet_beta",
+  "productName": "Nexus_Wallet_BETA_v0.8.5",
+  "version": "0.8.5",
   "buildDate": "December 27th 2018",
   "description": "Nexus",
   "scripts": {
@@ -35,7 +35,7 @@
   },
   "browserslist": "electron 1.8",
   "build": {
-    "productName": "Nexus",
+    "productName": "nexus_wallet_beta",
     "appId": "com.nexusearth.NexusTritiumBeta",
     "files": [
       "dist/",
@@ -57,7 +57,9 @@
       "./app/languages/*"
     ],
     "publish": {
-      "provider": "github"
+      "provider": "github",
+      "owner": "Qrysto",
+      "repo": "updater-test"
     },
     "mac": {
       "target": "dmg",
@@ -91,8 +93,8 @@
       "menuCategory": "Nexus",
       "installerSidebar": "resources/installerSidebar.bmp",
       "license": "resources/license.txt",
-      "shortcutName": "Tritium Wallet Beta",
-      "artifactName": "Nexus Tritium Wallet Beta Setup.exe"
+      "shortcutName": "Nexus Wallet Beta",
+      "artifactName": "${productName}-setup-${version}.${ext}"
     },
     "linux": {
       "target": [
@@ -250,7 +252,7 @@
     "electron-directory": "0.0.3",
     "electron-is-dev": "^1.0.1",
     "electron-log": "^2.2.17",
-    "electron-updater": "^4.0.5",
+    "electron-updater": "^4.0.6",
     "emotion-theming": "^10.0.5",
     "fd-slicer": "^1.1.0",
     "find-process": "^1.1.3",
