set the correct repo info on production
Former-commit-id: 2c6ae9af23dcf27c1fbd7f7e1aca7b7b88ba63a5

--- a/package.json
+++ b/package.json
@@ -62,8 +62,8 @@
     ],
     "publish": {
       "provider": "github",
-      "owner": "Qrysto",
-      "repo": "updater-test"
+      "owner": "Nexusoft",
+      "repo": "Nexus-Interface-React"
     },
     "mac": {
       "target": "dmg",
