adjusted mac build artifact name
Former-commit-id: f271638c290d1094df2eb888ee21635a47c7fbf4

--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
       "category": "public.app-category.utilities"
     },
     "dmg": {
-      "background": "resources/background.jpg",
+      "artifactName": "nexus_wallet_beta-${version}.${ext}",
+      "background": "resources/background@2x.png",
       "contents": [
         {
           "x": 129,
