--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,6 @@
   "compilerOptions": {
     "experimentalDecorators": true,
     "allowJs": true
-  }
+  },
+  "exclude": ["node_modules", "app/node_modules", "release", "dll", "app/dist"]
 }
