--- a/package.json
+++ b/package.json
@@ -269,6 +269,7 @@
     "is-running": "^2.1.0",
     "macaddress": "^0.2.9",
     "maxmind": "^2.6.0",
+    "memoize-one": "^5.0.0",
     "mocha": "^5.2.0",
     "move-file": "^1.0.0",
     "node-stream-zip": "^1.7.0",
