added 2 utility scripts to help tracking changes with the translations
Former-commit-id: 5e3ed77bc5183dd5c41b4945337c834dc6c97f27

--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "test-e2e": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 node --trace-warnings ./test/runTests.js e2e",
     "test-watch": "npm test -- --watch",
     "test:e2e": "./node_modules/mocha/bin/mocha tests/test.js",
-    "version2": "node ./internals/scripts/UpdateBuildDate.js"
+    "version2": "node ./internals/scripts/UpdateBuildDate.js",
+    "extract-changes": "node ./internals/scripts/extractTranslationChanges.js",
+    "update-translations": "node ./internals/scripts/updateTranslations.js"
   },
   "browserslist": "electron 1.8",
   "build": {
