mac build needs a zip for autoupdater to work
Former-commit-id: f2871a918be3e7ba5713b4235f9dc36e8c03f4f5

--- a/package.json
+++ b/package.json
@@ -68,7 +68,10 @@
       "repo": "Nexus-Interface-React"
     },
     "mac": {
-      "target": "dmg",
+      "target": [
+        "dmg",
+        "zip"
+      ],
       "category": "public.app-category.utilities"
     },
     "dmg": {
