added back the deb build for Linux
Former-commit-id: 936cf00b09bbde2713b77f3ceecd71d1928ba9ef

--- a/package.json
+++ b/package.json
@@ -108,8 +108,12 @@
     },
     "linux": {
       "target": [
+        "deb",
         "AppImage"
       ]
+    },
+    "deb": {
+      "artifactName": "nexus_wallet-${version}.${ext}"
     },
     "appImage": {
       "artifactName": "nexus_wallet-${version}.${ext}"
