updated the github repo in build config for AutoUpdate
Former-commit-id: 99d34aecbbc0689c1a040dd55dc097f73ad50528

--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "publish": {
       "provider": "github",
       "owner": "Nexusoft",
-      "repo": "Nexus-Interface-React"
+      "repo": "NexusInterface"
     },
     "mac": {
       "target": [
