--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nexus_wallet",
-  "productName": "Nexus_Wallet_BETA_v0.8.7",
-  "version": "0.8.7",
-  "buildDate": "Febuary 15th 2019",
+  "productName": "Nexus_Wallet_BETA_v0.8.8",
+  "version": "0.8.8",
+  "buildDate": "Febuary 22nd 2019",
   "description": "Nexus",
   "scripts": {
     "build": "concurrently \"npm run build-main\" \"npm run build-renderer\"",
