Fixed issue with the package names not containg the platform. Removed ref to old repo name.
Former-commit-id: 4d6fa2264552cf16254c6e3f30ba3824742fe311

--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
       "category": "public.app-category.utilities"
     },
     "dmg": {
-      "artifactName": "nexus_wallet-${version}.${ext}",
+      "artifactName": "nexus_wallet-MacOSX-${version}.${ext}",
       "background": "resources/background.jpg",
       "contents": [
         {
@@ -104,7 +104,7 @@
       "installerSidebar": "resources/installerSidebar.bmp",
       "license": "resources/license.txt",
       "shortcutName": "Nexus Wallet Beta",
-      "artifactName": "nexus_wallet-setup-${version}.${ext}"
+      "artifactName": "nexus_wallet-setup-Win-${version}.${ext}"
     },
     "linux": {
       "target": [
@@ -113,10 +113,10 @@
       ]
     },
     "deb": {
-      "artifactName": "nexus_wallet-${version}.${ext}"
+      "artifactName": "nexus_wallet-Linux-${version}.${ext}"
     },
     "appImage": {
-      "artifactName": "nexus_wallet-${version}.${ext}"
+      "artifactName": "nexus_wallet-Linux-${version}.${ext}"
     },
     "directories": {
       "buildResources": "resources",
@@ -125,7 +125,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Nexusoft/Nexus-Interface-React.git"
+    "url": "git+https://github.com/Nexusoft/NexusInterface.git"
   },
   "author": {
     "name": "The Nexus Embassy",
@@ -134,7 +134,7 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Nexusoft/Nexus-Interface-React/issues"
+    "url": "https://github.com/Nexusoft/NexusInterface/issues"
   },
   "keywords": [
     "electron",
@@ -143,7 +143,7 @@
     "sass",
     "webpack"
   ],
-  "homepage": "https://github.com/Nexusoft/Nexus-Interface-React/#readme",
+  "homepage": "https://github.com/Nexusoft/NexusInterface/#readme",
   "devDependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
