Removed Version Number from Package Name
Former-commit-id: aea7f7dc56502f46d67bae6edcd43e4c060c5587

--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexus_wallet",
-  "productName": "Nexus_Wallet_BETA_v0.8.8",
+  "productName": "Nexus_Wallet_BETA",
   "version": "0.8.8",
   "description": "Nexus",
   "main": "./main.prod.js",
