--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexus_wallet",
-  "productName": "Nexus_Wallet_BETA_v0.8.8",
+  "productName": "Nexus_Wallet_BETA",
   "version": "0.8.8",
   "buildDate": "Febuary 22nd 2019",
   "description": "Nexus",
