Fixed issue auto update issue not finding the right repo.
Former-commit-id: 6313f6dcb9e9c1d53bcc0d21e17068783b50d25f

--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "publish": {
       "provider": "github",
       "owner": "Nexusoft",
-      "repo": "NexusInterface"
+      "repo": "NexusInterface",
+      "vPrefixedTagName": false
     },
     "mac": {
       "target": [
