--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nexus_wallet",
   "productName": "Nexus_Wallet_BETA",
-  "version": "0.9.0.1",
+  "version": "0.9.0-alpha1",
   "description": "Nexus",
   "main": "./main.prod.js",
   "author": {
