--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nexus_wallet",
   "productName": "Nexus_Wallet_BETA",
-  "version": "0.8.9",
-  "buildDate": "March 01st 2019",
+  "version": "0.9.0-alpha2",
+  "buildDate": "March 5th 2019",
   "description": "Nexus",
   "scripts": {
     "build": "concurrently \"npm run build-main\" \"npm run build-renderer\"",
