[WIP] foundation for new Nexus Modules
Former-commit-id: 90dda186004d334916347095e216d7e01cc1a275

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "experimentalDecorators": true,
-    "allowJs": true
+    "allowJs": true,
+    "noEmit": true
   },
   "exclude": ["node_modules", "app/node_modules", "release", "dll", "app/dist"]
 }
