--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "nexus_wallet",
   "productName": "Nexus_Wallet_BETA",
   "version": "0.9.0-alpha2",
+  "moduleApi": {
+    "currentVersion": "0.1.0",
+    "lowestSupportedVersion": "0.1.0"
+  },
   "buildDate": "March 5th 2019",
   "description": "Nexus",
   "scripts": {
@@ -231,6 +235,7 @@
     "alert-node": "^1.2.2",
     "async": "^2.6.1",
     "auto-launch": "^5.0.5",
+    "axios": "^0.18.0",
     "browserslist": "^4.3.5",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
@@ -283,6 +288,8 @@
     "redux-thunk": "^2.3.0",
     "remote-file-size": "^3.0.5",
     "request-promise": "^4.2.2",
+    "semver": "^5.6.0",
+    "semver-regex": "^2.0.0",
     "source-map-support": "^0.5.9",
     "systeminformation": "^3.45.7",
     "tarball-extract": "0.0.6",
