--- a/package.json
+++ b/package.json
@@ -229,6 +229,7 @@
     "webpack-sources": "^1.3.0"
   },
   "dependencies": {
+    "@emotion/cache": "^10.0.9",
     "@emotion/core": "^10.0.6",
     "@emotion/styled": "^10.0.6",
     "ajv": "^6.9.1",
