added ModuleIcon, sanitizing module svg icons before rendering
Former-commit-id: 276c87e4acfb43d80fb8cba11e5cb668416d49a3

--- a/package.json
+++ b/package.json
@@ -250,6 +250,7 @@
     "core-js": "^2.6.0",
     "csvtojson": "^2.0.8",
     "devtron": "^1.4.0",
+    "dompurify": "^1.0.10",
     "download": "^7.1.0",
     "electron": "^4.0.1",
     "electron-debug": "^2.0.0",
