finaaaaaly got this right - module hash with normalized newline characters across platforms
Former-commit-id: edf7f9a195e8efbc1bf67bd4a3b3427e23065589

--- a/package.json
+++ b/package.json
@@ -264,11 +264,13 @@
     "getmac": "^1.4.6",
     "history": "^4.7.2",
     "is-running": "^2.1.0",
+    "istextorbinary": "^2.5.1",
     "macaddress": "^0.2.9",
     "maxmind": "^2.6.0",
     "memoize-one": "^5.0.0",
     "mocha": "^5.2.0",
     "move-file": "^1.0.0",
+    "multistream": "^2.1.1",
     "node-stream-zip": "^1.7.0",
     "patch-package": "^6.0.2",
     "pretty-bytes": "^5.1.0",
@@ -296,6 +298,7 @@
     "semver": "^5.6.0",
     "semver-regex": "^2.0.0",
     "source-map-support": "^0.5.9",
+    "stream-normalize-eol": "^1.0.1",
     "systeminformation": "^3.45.7",
     "tarball-extract": "0.0.6",
     "three": "^0.98.0",
