--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "nexus_wallet",
   "productName": "Nexus_Wallet_BETA",
   "version": "0.9.0-alpha3",
-  "moduleApi": {
-    "currentVersion": "0.1.0",
-    "lowestSupportedVersion": "0.1.0"
-  },
+  "moduleApiVersion": "0.1.0",
+  "supportedModuleApiVersion": "0.1.0",
   "buildDate": "March 15th 2019",
   "description": "Nexus",
   "scripts": {
