--- a/package.json
+++ b/package.json
@@ -280,6 +280,7 @@
     "react-color": "^2.14.1",
     "react-countdown-now": "^1.3.0",
     "react-dom": "^16.6.3",
+    "react-dropzone": "^10.0.6",
     "react-hot-loader": "^4.3.12",
     "react-intl": "^2.7.2",
     "react-intl-redux": "^2.0.2",
