--- a/package.json
+++ b/package.json
@@ -257,6 +257,7 @@
     "electron-log": "^2.2.17",
     "electron-updater": "^4.0.6",
     "emotion-theming": "^10.0.5",
+    "extract-zip": "^1.6.7",
     "fd-slicer": "^1.1.0",
     "find-process": "^1.1.3",
     "getmac": "^1.4.6",
