Working on copy dir code.
Former-commit-id: 8f8303ffe48000de73be4b70d4d9900c3f93f83a

--- a/package.json
+++ b/package.json
@@ -245,6 +245,7 @@
     "connected-react-router": "^6.1.0",
     "copy-to-clipboard": "^3.0.8",
     "core-js": "^2.6.0",
+    "cpy": "^7.2.0",
     "csvtojson": "^2.0.8",
     "devtron": "^1.4.0",
     "dompurify": "^1.0.10",
